--- a/P1.html
+++ b/P1.html
@@ -114,7 +114,7 @@
 <div class="bg-overlay" aria-hidden="true"></div>
 
 <!-- content -->
-<section><img class="cutout" src="https://pngimg.com/uploads/apple/apple_PNG12406.png" alt="Apple"><div class="caption">Fresh & Groovy<br>Apple!</div></section>
+<section><img class="cutout" src="https://drive.google.com/file/d/1JvQG5Z6oB8TgqcjwpMxAOOUvD0-Rv3c6/view?usp=sharing" alt="Apple"><div class="caption">Fresh & Groovy<br>Apple!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/banana/banana_PNG842.png" alt="Banana"><div class="caption">The Yellow<br>Vibe of Happiness!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/orange/orange_PNG798.png" alt="Orange"><div class="caption">Juicy<br>Orange Power!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/strawberry/strawberry_PNG2639.png" alt="Strawberry"><div class="caption">Sweet & Red<br>Berry Bliss!</div></section>
