--- a/P1.html
+++ b/P1.html
@@ -114,10 +114,10 @@
 <div class="bg-overlay" aria-hidden="true"></div>
 
 <!-- content -->
-<section><img class="cutout" src="https://ibb.co/pr3gcpgR" alt="Apple"><div class="caption">Fresh & Groovy<br>Apple!</div></section>
-<section><img class="cutout" src="https://ibb.co/pr3gcpgR" alt="Banana"><div class="caption">The Yellow<br>Vibe of Happiness!</div></section>
-<section><img class="cutout" src="https://ibb.co/pvktCPsc" alt="Orange"><div class="caption">Juicy<br>Orange Power!</div></section>
-<section><img class="cutout" src="https://ibb.co/BVRsTsYD" alt="Strawberry"><div class="caption">Sweet & Red<br>Berry Bliss!</div></section>
+<section><img class="cutout" src="https://pngimg.com/uploads/apple/apple_PNG12406.png" alt="Apple"><div class="caption">Fresh & Groovy<br>Apple!</div></section>
+<section><img class="cutout" src="https://pngimg.com/uploads/banana/banana_PNG842.png" alt="Banana"><div class="caption">The Yellow<br>Vibe of Happiness!</div></section>
+<section><img class="cutout" src="https://pngimg.com/uploads/orange/orange_PNG798.png" alt="Orange"><div class="caption">Juicy<br>Orange Power!</div></section>
+<section><img class="cutout" src="https://pngimg.com/uploads/strawberry/strawberry_PNG2639.png" alt="Strawberry"><div class="caption">Sweet & Red<br>Berry Bliss!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/kiwi/kiwi_PNG4032.png" alt="Kiwi"><div class="caption">Green & Zesty<br>Kiwi Kick!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/watermelon/watermelon_PNG234.png" alt="Watermelon"><div class="caption">Cool & Refreshing<br>Watermelon!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/pineapple/pineapple_PNG440.png" alt="Pineapple"><div class="caption">Tropical<br>Pineapple Fun!</div></section>
