--- a/P1.html
+++ b/P1.html
@@ -108,24 +108,24 @@
 <body>
 
 <!-- audio (CORS-friendly test file) -->
-<audio id="bg-music" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" loop preload="auto"></audio>
+<audio id="bg-music" src="https://cdn.pixabay.com/audio/2025/07/29/audio_2a1b68d9d9.mp3" loop preload="auto"></audio>
 
 <canvas id="neural-bg" aria-hidden="true"></canvas>
 <div class="bg-overlay" aria-hidden="true"></div>
 
 <!-- content -->
-<section><img class="cutout" src="https://pngimg.com/uploads/apple/apple_PNG12406.png" alt="Apple"><div class="caption">Fresh & Groovy<br>Apple!</div></section>
-<section><img class="cutout" src="https://pngimg.com/uploads/banana/banana_PNG842.png" alt="Banana"><div class="caption">The Yellow<br>Vibe of Happiness!</div></section>
-<section><img class="cutout" src="https://pngimg.com/uploads/orange/orange_PNG798.png" alt="Orange"><div class="caption">Juicy<br>Orange Power!</div></section>
-<section><img class="cutout" src="https://pngimg.com/uploads/strawberry/strawberry_PNG2639.png" alt="Strawberry"><div class="caption">Sweet & Red<br>Berry Bliss!</div></section>
-<section><img class="cutout" src="https://pngimg.com/uploads/kiwi/kiwi_PNG4032.png" alt="Kiwi"><div class="caption">Green & Zesty<br>Kiwi Kick!</div></section>
+<section><img class="cutout" src="https://i.ibb.co/k2NjC22S/ei-1754875399570-removebg-preview.png" alt="ei-1754875399570-removebg-preview" border="0" /></a><div class="caption">Fresh & Groovy<br>Apple!</div></section>
+<section><img class="cutout" src="https://i.ibb.co/Rk6Fz15X/ei-1754875410925-removebg-preview.png" alt="ei-1754875410925-removebg-preview" border="0" /></a> <div class="caption">The Yellow<br>Vibe of Happiness!</div></section>
+<section><img class="cutout" src="https://i.ibb.co/kgPRYyrj/ei-1754875176600-removebg-preview.png"  border="0" /></a><div class="caption">Juicy<br>Orange Power!</div></section>
+<section><img class="cutout" src="https://i.ibb.co/DDnKwKjX/ei-1754875169898-removebg-preview.png" alt="ei-1754875169898-removebg-preview" border="0" /></a><div class="caption">Sweet & Red<br>Berry Bliss!</div></section>
+<section><img class="cutout" src="https://i.ibb.co/fG8qT5Dh/ei-1754875160712-removebg-preview.png" alt="ei-1754875160712-removebg-preview" border="0" /></a>div class="caption">Green & Zesty<br>Kiwi Kick!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/watermelon/watermelon_PNG234.png" alt="Watermelon"><div class="caption">Cool & Refreshing<br>Watermelon!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/pineapple/pineapple_PNG440.png" alt="Pineapple"><div class="caption">Tropical<br>Pineapple Fun!</div></section>
-<section><img class="cutout" src="https://pngimg.com/uploads/mango/mango_PNG916.png" alt="Mango"><div class="caption">Golden Sweet<br>Mango Magic!</div></section>
+<section><img class="cutout" src="https://i.ibb.co/Xkz91T93/ei-1754875084359-removebg-preview-3.png" alt="ei-1754875084359-removebg-preview-3" border="0" /></a><div class="caption">Golden Sweet<br>Mango Magic!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/peach/peach_PNG555.png" alt="Peach"><div class="caption">Soft & Juicy<br>Peach Treat!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/cherry/cherry_PNG637.png" alt="Cherry"><div class="caption">Cute & Sweet<br>Cherry Love!</div></section>
 <section><img class="cutout" src="https://pngimg.com/uploads/grape/grape_PNG2966.png" alt="Grapes"><div class="caption">Bunch of<br>Grape Joy!</div></section>
-<section><img class="cutout" src="https://pngimg.com/uploads/papaya/papaya_PNG42.png" alt="Papaya"><div class="caption">Tropical & Fresh<br>Papaya!</div></section>
+<section><img class="cutout" src="https://i.ibb.co/Y4Pf7d7z/ei-1754875194363-removebg-preview.png" alt="ei-1754875194363-removebg-preview" border="0" /></a><div class="caption">Tropical & Fresh<br>Papaya!</div></section>
 
 <!-- hint that disappears after start -->
 <div id="hint">Click / tap / press any key / scroll once to start music & auto-scroll</div>
